Revision history for Perl extension App::Sqitch

0.941
     - Fixed the "Name" header in `sqitch-rebase` so that it will actually
       show up on the CPAN search sites.
     - Fixed test failure triggered by the passsage of time im `t/engine.t`.

0.940  2012-12-04T05:49:45Z
     - Fixed tests that failed due to I18N issues, with thanks to Arnaud
       (Arhuman) ASSAD!
     - Localized messages are now properly encoded in UTF-8. Thanks to Ronan
       Dunklau for the report (issue #46) and to Guido Flohr for details on
       how to address the issue.
     - The variables defined for the `add`, `deploy`, and `revert` commands
       now have the case of there names preserved if Config::GitLike 1.10 or
       later is installed. Thanks to Ronan Dunklau for the report (issue #48)
       and to Alex Vandiver for the case-preserving update to Config::GitLike.
     - Attempting to run `sqitch` with no command now outputs the list of
       supported commands (`sqitchcommands`), rather than the list of core
       options. Thanks to BryLo for the suggestion.
     - Changed the plan parser so that it no longer changes the order of
       changes based on the dependency graph. Unfortunately, this meant that
       the order could change from one run to another, especially if new
       changes were added since the last deploy. The planner now throws an
       exception if the order in the plan is wrong, and suggests that the user
       move changes in the plan file to get it to work properly.
     - Fixed bug where the `core.plan_file` configuration variable was
       ignored.
     - Improved error handling when deploying and reverting a change. If the
       change successfully deployed but the logging of the deployment to the
       database failed, there was just a rollback message. Sqitch will now
       emit the underlying error *and* run the revert script for the
       just-deployed change.