@@ -4,6 +4,9 @@ Revision history for Perl extension App::Sqitch
      - Fixed the "Name" header in `sqitch-rebase` so that it will actually
        show up on the CPAN search sites.
      - Fixed test failure triggered by the passsage of time im `t/engine.t`.
+     - At the start of a `deploy`, if the most recently deployed change has
+       any umlogged tags (that is, tags added since the last `deploy`), they
+       will be logged before the `deploy` continues (issue #60).
 
 0.940  2012-12-04T05:49:45Z
      - Fixed tests that failed due to I18N issues, with thanks to Arnaud
